# containup-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  clean.sh  gen-project-context.py  precommit.sh  pyproject.toml  pyrightconfig.json  release.sh  requirements-dev.txt  setup.py
.github/workflows/: pull-request-check.yml  python-publish.yml
containup/: StackRunner.py  __init__.py  cli.py  containup_cli.py  containup_run.py  healthcheck_helpers.py  stack.py
containup/business/audit/: audit_alert.py  audit_container_image.py  audit_depends_on.py  audit_registry.py  audit_report.py  audit_secrets.py  audit_service_healthcheck.py  audit_service_mounts.py
containup/business/commands/: command_down.py  command_up.py  container_health_status.py  container_operator.py  user_interactions.py
containup/business/execution_listener/: __init__.py
containup/business/healhcheck_helpers/: __init__.py
containup/business/live_state/: stack_state.py  stack_state_resolver.py
containup/business/model/: audit_alert.py
containup/business/plugins/: plugin_builtins.py  plugin_registry.py
containup/business/reports/: report_generator.py  report_standard.py
containup/commands/: __init__.py  command_down.py  command_logs.py  command_up.py  commant_down.py  container_operator.py  execution_auditor.py
containup/infra/: user_interactions_cli.py
containup/infra/docker/: docker_operator.py  healthcheck.py  mounts.py  ports.py
containup/infra/dryrun/: dryrun_operator.py
containup/infra/runner/: runner.py
containup/stack/: network.py  service.py  service_healthcheck.py  service_mounts.py  service_ports.py  stack.py  volume.py
containup/utils/: absolute_paths.py  duration_to_nano.py  secret_value.py
docs/: Makefile
docs/source/: api.rst  conf.py  howto-additional-comment-line-args.md  howto-container-dependencies.md  howto-container-scale.md  index.rst  why.md
installer/: containup-try.sh
samples/: containup-try.sh  sample_n8n.py  sample_odoo.py  sample_sentry.py  sample_web_stack.py
tests/: cli_test.py
tests/business/stack/: services_topological_sort_test.py  stack_test.py
tests/infra/docker/: healthcheck_test.py  mounts_test.py  ports_test.py
tests/stack/: services_topological_sort_test.py
tests/utils/: duration_to_nano_test.py  secret_value_test.py
