[project]
name = "containup"
version = "0.1.0"
description = "Define Docker stacks in Python, include your environments logic, extend as you wish, no YAML."
authors = [{name = "Sébastien JUST"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
dependencies = ["docker"]

[tool.setuptools]
packages = ["containup"]

[tool.setuptools.packages.find]
where = ["."]
include = ["containup*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
# Python 3.9 because this is intended for production on possibly old environments
target-version = "py39" 
lint.extend-ignore = [
    # to avoid conflicts with black
    "E501",  # line too long
    "W291",  # spaces at end of line
    "W293",  # empty line with space
    "W292",  # file does not finish with a newline
    "E711",  # None comparison (Black will reformat)
    "E712",  # True/False comparison (Black will reformat)
]

[tool.black]
line-length = 88
# Python 3.9 because this is intended for production on possibly old environments
target-version = ["py39"]