[project]
name = "containup"
# Updated by bumpver
version = "v0.1.9"
description = "Define Docker stacks in Python, include your environments logic, extend as you wish, no YAML."
authors = [{name = "Sébastien JUST"}]
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
dependencies = ["docker", "typing_extensions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Software Distribution",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent"
]
keywords = [
    "docker",
    "compose",
    "docker-compose",
    "containers",
    "infrastructure",
    "orchestration",
    "stack",
    "devops",
    "deployment",
    "python",
    "automation"
]

[project.urls]
Homepage = "https://github.com/sebastienjust/containup-py"
Repository = "https://github.com/sebastienjust/containup-py.git"
Issues = "https://github.com/sebastienjust/containup-py/issues"
Changelog = "https://github.com/sebastienjust/containup-py/blob/main/CHANGELOG.md"


[tool.setuptools.packages.find]
where = ["."]
include = ["containup*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
# Python 3.9 because this is intended for production on possibly old environments
target-version = "py39" 
lint.extend-ignore = [
    # to avoid conflicts with black
    "E501",  # line too long
    "W291",  # spaces at end of line
    "W293",  # empty line with space
    "W292",  # file does not finish with a newline
    "E711",  # None comparison (Black will reformat)
    "E712",  # True/False comparison (Black will reformat)
]

[tool.black]
line-length = 88
# Python 3.9 because this is intended for production on possibly old environments
target-version = ["py39"]

[tool.bumpver]
current_version = "v0.1.9"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"',
]
"containup/__init__.py" = [
    '__version__ = "{version}"'
]
"containup/containup_cli.py" = [
    '_version = "{version}"'
]
"docs/source/conf.py" = [
    'release = "{version}"'
]